// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for state: error, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: medium and hasLabel: true 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
legend {
  margin: 0 0 1rem;
  padding: 0;
  color: #000;
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}
@media (min-width: 760px) and (max-width: 999px) {
  legend {
    font-size: 1.125rem;
    line-height: 1.5555555556;
  }
}

@media (min-width: 1000px) and (max-width: 1299px) {
  legend {
    font-size: 1.25rem;
    line-height: 1.4;
  }
}

@media (min-width: 1300px) and (max-width: 1759px) {
  legend {
    font-size: 1.375rem;
    line-height: 1.4545454545;
  }
}

@media (min-width: 1760px) {
  legend {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: small and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: none, labelSize: small and hasLabel: true 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
legend {
  margin: 0 0 1rem;
  padding: 0;
  color: #000;
  font: normal normal 600 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for state: success, labelSize: medium and hasLabel: false 1`] = `
":host {
  display: block !important;
}
fieldset {
  margin: 0;
  padding: 0;
  border: none;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 1rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;
